--- a/style.css
+++ b/style.css
@@ -1,22 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
-
+*{
+     font-family: 'Dancing Script', cursive;
 h1{
     font-size: 40px;
     text-align: center;
-    font-family: 'Dancing Script', cursive;
     color: snow;
 }
 h4{
     font-size: 50px;
     text-align: center;
-    font-family: 'Dancing Script', cursive;
     color: snow;
 }
 
 h2{
     font-size: 30px;
     text-align: center;
-    font-family: 'Dancing Script', cursive;
     color: snow;
 }
 body{
@@ -26,7 +24,6 @@ body{
 h5{
     color: aliceblue;
     text-align: center;
-    font-family: 'Dancing Script', cursive;
     font-size: 20px;
 }
 
