--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 *{
      font-family: 'Dancing Script', cursive;
+}
 h1{
     font-size: 40px;
     text-align: center;
